GNOME Bugzilla – Bug 664687
CPU count detection fails on OS X
Last modified: 2011-11-24 00:22:18 UTC
Created attachment 202037 [details] [review] patch sysctl call modifies n_threads instead of n.
Pushed, thanks for the patch! commit 7dd07ed7fbbb9a31461c385f0e5cac70a8e1050b Author: Matej Knopp <matej.knopp@gmail.com> Date: Thu Nov 24 00:41:27 2011 +0100 Fix cpu cores detection on OS X https://bugzilla.gnome.org/show_bug.cgi?id=664687
cherry-picked into 0.10 as well (should've been the other way round really, ideally): commit 28142d9549c0c5667336a26af7923425b44eec09 Author: Matej Knopp <matej.knopp@gmail.com> Date: Thu Nov 24 00:41:27 2011 +0100 Fix cpu cores detection on OS X https://bugzilla.gnome.org/show_bug.cgi?id=664687