Fix cpu cores detection on OS X

https://bugzilla.gnome.org/show_bug.cgi?id=664687